MDEV-14645: AS OF TIMESTAMP is misused as TRX_ID [fixes #396]